# memory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  package.json  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
eval/: .gitignore  README.md  bench_runner.py  http_helpers.py  pyproject.toml  runner.py
eval/benchmarks/: __init__.py  base.py  bpi_bench.py  fetch.py  locomo.py  memory_agent_bench.py  scoring.py  stats.py
eval/benchmarks/fixtures/: bpi_bench_fixture.json  bpi_bench_smoke_fixture.json  locomo_fixture.json  mab_fixture.json
eval/datasets/: README.md  lme.jsonl  smoke.jsonl
eval/results/: phase3-only-manifest-go-20260419-1058.json  phase3-only-result-go-20260419-1058.json  phase3-only-result-py-20260419-1058.json  phase3-only-result-ts-20260419-1058.json  tri-lme-s20-probe-py-topk100-c150-r120-after-order.json  tri-lme-s20-probe-py-topk100-c150-r120.json  tri-lme-s20-probe-py-topk60-c100-r60-after-order.json  tri-lme-s20-probe-py-topk60-c100-r60-restored.json  tri-lme-s5-go-smoke-20260419-061900.json  tri-lme-s5-go-smoke-20260419-062500-manifest.json  tri-lme-s5-go-smoke-20260419-062500.json  ts-only-probe-20260419-1051.json  ts-only-probe-20260419-1052b.json  ts-only-probe-20260419-1054.json
eval/scorer/: __init__.py  exact.py  judge.py
eval/scripts/: lme_cache_key.py  run_lme_modes.sh  run_tri_lme.sh
eval/sdks/: __init__.py  base.py  go.py  py.py  ts.py
eval/tests/: test_bench_runner.py  test_benchmark_adapters.py  test_benchmark_scoring.py  test_benchmark_stats.py  test_http_helpers.py  test_runner.py  test_scorer.py  test_sdk_runners.py
mcp/py/: README.md  pyproject.toml
mcp/py/src/jeffs_brain_memory_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
mcp/py/src/jeffs_brain_memory_mcp/tools/: __init__.py  _types.py  ask.py  consolidate.py  create_brain.py  extract.py  ingest_file.py  ingest_url.py  list_brains.py  recall.py  reflect.py  remember.py  search.py
mcp/py/tests/: test_server.py
mcp/py/tests/fixtures/: hello.md
sdks/py/: README.md  pyproject.toml
sdks/py/src/jeffs_brain_memory/: __init__.py  augmented_reader.py  errors.py  path.py
sdks/py/src/jeffs_brain_memory/acl/: __init__.py  rbac.py  types.py  wrap.py
sdks/py/src/jeffs_brain_memory/acl_openfga/: README.md  __init__.py  openfga.py
sdks/py/src/jeffs_brain_memory/cli/: __init__.py  config.py  main.py
sdks/py/src/jeffs_brain_memory/eval/: __init__.py  lme.py
sdks/py/src/jeffs_brain_memory/http/: __init__.py  conformance.py  daemon.py  daemon_vectors.py  problem.py  routes.py  server.py
sdks/py/src/jeffs_brain_memory/ingest/: __init__.py  file.py  markdown.py  pdf.py  url.py
sdks/py/src/jeffs_brain_memory/knowledge/: __init__.py  base.py  compile.py  frontmatter.py  ingest.py  search.py  types.py
sdks/py/src/jeffs_brain_memory/llm/: __init__.py  anthropic.py  config.py  fake.py  ollama.py  openai.py  provider.py  types.py
sdks/py/src/jeffs_brain_memory/memory/: __init__.py  _memstore.py  consolidate.py  contextualise.py  distill.py  episodes.py  extract.py  heuristic.py  manager.py  (+9 more)
sdks/py/tests/: _fake_server.py  _knowledge_store.py  _retrieval_fakes.py  conftest.py  test_aliases.py  test_augmented_reader.py  test_cli.py  test_http_conformance.py  test_knowledge_chunker.py  test_knowledge_compile.py  test_knowledge_frontmatter.py  test_knowledge_ingest.py  test_knowledge_search.py  test_llm_anthropic.py  test_llm_config.py  test_llm_fake.py  test_llm_ollama.py  test_llm_openai.py  test_memory_buffer.py  test_memory_consolidate.py  test_memory_contextualise.py  test_memory_episodes.py  test_memory_extract.py  test_memory_feedback.py  test_memory_heuristic.py  test_memory_manager.py  test_memory_procedural.py  test_memory_recall.py  test_memory_reflect.py  test_memory_slugmap.py  test_memory_wikilink.py  test_query_distill.py  test_query_normalise.py  test_query_parser.py  test_query_temporal.py  test_retrieval_golden.py  test_retrieval_index_source.py  test_retrieval_intent.py  test_retrieval_reranker.py  test_retrieval_retriever.py  (+20 more)
sdks/py/tests/acl/: test_openfga.py  test_rbac.py  test_wrap.py
(+1347 files in other folders)
