[project]
name = "jeffs-brain-memory"
version = "0.0.1"
description = "Cross-language memory library for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Alex J", email = "alex@lleverage.ai" }]
dependencies = [
  "click>=8.1",
  "starlette>=0.38",
  "uvicorn>=0.30",
  "sqlite-vec>=0.1.6",
  "pygit2>=1.15",
  "pdfplumber>=0.11",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
ollama = ["ollama>=0.3"]

[project.scripts]
memory = "jeffs_brain_memory.cli.main:main"

[project.urls]
Homepage = "https://github.com/jeffs-brain/memory"
Issues = "https://github.com/jeffs-brain/memory/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jeffs_brain_memory"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
